<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.weblyzard.api</groupId>
	<artifactId>weblyzard-api</artifactId>
	<version>0.2.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>com.weblyzard.api.weblyzard-api</name>
	<description>Java library for accessing webLyzard web services</description>
	<url>https://github.com/weblyzard/weblyzard_api</url>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Albert Weichselbraun</name>
			<email>weichselbraun@weblyzard.com</email>
			<organization>Weblyzard</organization>
			<organizationUrl>http://weblyzard.com</organizationUrl>
		</developer>
		<developer>
			<name>Philipp Kuntschik</name>
			<email>philipp.kuntschik@htwchur.ch</email>
			<organization>University of Applied Sciences Chur</organization>
			<organizationUrl>http://www.htwchur.ch/person/kuntschik.philipp.html</organizationUrl>
		</developer>
		<developer>
			<name>Norman Süsstrunk</name>
			<email>norman.suesstrunk@htwchur.ch</email>
			<organization>HTW Chur</organization>
			<organizationUrl>http://htwchur.ch</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/weblyzard/weblyzard_api.git</connection>
		<developerConnection>scm:git:ssh://github.com:weblyzard/weblyzard_api.git</developerConnection>
		<url>https://github.com/weblyzard/weblyzard_api/tree/master</url>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<jersey2.version>2.25.1</jersey2.version>
		<jaxb.version>2.3.0</jaxb.version>
	</properties>

	<!-- profiles for the maven deployments -->
	<profiles>
		<profile>
			<id>profile-semanticlab</id>
			<properties>
				<environment>semanticlab</environment>
				<snapshot-repository-id>code.semanticlab.net</snapshot-repository-id>
				<snapshot-repository-url>dav:http://code.semanticlab.net/deploy/</snapshot-repository-url>
				<repository-id>code.semanticlab.net</repository-id>
				<repository-url>dav:http://code.semanticlab.net/deploy/</repository-url>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
				<property>
					<name>environment</name>
					<value>semanticlab</value>
				</property>
			</activation>
		</profile>
		<profile>
			<id>profile-mavencentral</id>
			<properties>
				<environment>mavencentral</environment>
				<snapshot-repository-id>
					ossrh
				</snapshot-repository-id>
				<snapshot-repository-url>
					https://oss.sonatype.org/content/repositories/snapshots
				</snapshot-repository-url>
				<repository-id>ossrh</repository-id>
				<repository-url>
					https://oss.sonatype.org/service/local/staging/deploy/maven2/
				</repository-url>
			</properties>
			<activation>
				<property>
					<name>environment</name>
					<value>mavencentral</value>
				</property>
			</activation>
		</profile>
	</profiles>

	<distributionManagement>
		<snapshotRepository>
			<id>${snapshot-repository-id}</id>
			<url>${snapshot-repository-url}</url>
		</snapshotRepository>
		<repository>
			<id>${repository-id}</id>
			<url>${repository-url}</url>
		</repository>
	</distributionManagement>

	<build>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav-jackrabbit</artifactId>
				<version>2.4</version>
			</extension>
		</extensions>
		<resources>
			<resource>
				<directory>src/resources/main</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/resources/test</directory>
				<filtering>true</filtering>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<configuration>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<excludes>
						<exclude>src/java/test/</exclude>
					</excludes>
					<source>9</source>
					<target>9</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.21.0</version>
			</plugin>

			<!-- Integration testing -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.21.0</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- force common style and code validation settings -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.10</version>
				<configuration>
					<additionalConfig>
						<file>
							<name>.settings/org.eclipse.jdt.core.prefs</name>
							<url>https://raw.githubusercontent.com/weblyzard/eclipse-settings/master/settings/org.eclipse.jdt.core.prefs</url>
						</file>
						<file>
							<name>.settings/org.eclipse.jdt.ui.prefs</name>
							<url>https://raw.githubusercontent.com/weblyzard/eclipse-settings/master/settings/org.eclipse.jdt.ui.prefs</url>
						</file>
					</additionalConfig>
				</configuration>
			</plugin>
		</plugins>
		<sourceDirectory>src/java/main</sourceDirectory>
		<testSourceDirectory>src/java/test</testSourceDirectory>
	</build>

	<dependencies>

		<!-- eclipse persistence -->
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>eclipselink</artifactId>
			<version>2.7.1</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.8.9</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-client</artifactId>
			<version>${jersey2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<version>${jersey2.version}</version>
		</dependency>

		<!-- JAX-RS & json -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.16.20</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.25</version>
		</dependency>


		<!-- test dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>23.0</version>
			<scope>test</scope>
		</dependency>

		<!-- JAXB dependencies required from java9 onwards -->
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>${jaxb.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>${jaxb.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>${jaxb.version}</version>
		</dependency>

	</dependencies>
</project>

